# model-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
assets/: StanfordBunny.glb
shaders/: vtx_mirror_shader.glsl  vtx_outline_shader.glsl  vtx_shader.glsl
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
